Corregimos la nota al pie y recompilamos

--- a/Nivel0-A/Guia/guia.tex
+++ b/Nivel0-A/Guia/guia.tex
@@ -172,7 +172,7 @@ Puede mover ahora el slider a la izquierda y la derecha para comparar las imáge
 \chapter{Combinaciones espectrales}
 Si llego hasta acá, notará que en la combinacion de colores que estamos observando la imagen, a pesar de ser intuitiva, no permite distinguir claramente las zonas incenciadas
 
-Para mejorar la detección del incendio es necesario entender que un satélite, como cualquier sensor, puede ser configurado para medir distintas coberturas. En este caso, el satélite mide la cantidad de luz\footnore{Conocida como radiancia en teledetección.} que proviene de la superficie terrestre como hacen nuestros ojos. Sin embargo, a diferencia de nuestros ojos es posibles cambiar la zona del espectro electromagnético donde medimos y como la mostramos.
+Para mejorar la detección del incendio es necesario entender que un satélite, como cualquier sensor, puede ser configurado para medir distintas coberturas. En este caso, el satélite mide la cantidad de luz\footnote{Conocida como radiancia en teledetección.} que proviene de la superficie terrestre como hacen nuestros ojos. Sin embargo, a diferencia de nuestros ojos es posibles cambiar la zona del espectro electromagnético donde medimos y como la mostramos.
 
 \begin{figure}[h!]
     \centering
