Agregamos el archivo del video para el nivel 0

--- a/Nivel0-A/Videos/presentacion.tex
+++ b/Nivel0-A/Videos/presentacion.tex
@@ -1,12 +1,12 @@
 \documentclass[]{beamer}
 \usetheme[block=fill,progressbar=frametitle,numbering=none]{metropolis}
-\input{../preamble.tex}
-\author{Francisco Nemiña}
-\title{Nivel 2: herramientas de teledetección cuantitativa}
+\input{preamble.tex}
+\author{Marina Compagnucci \and Francisco Nemiña}
+\title{Nivel 0: interpretación visual}
 \subtitle{Introducción}
 \institute{Unidad de Educación y Formación Masiva \\ Comisión Nacional de Actividades Espaciales}
 \date{}
-\graphicspath{{../figs/}}
+\graphicspath{{./figs/}}
 
 \begin{document}
 
